2006-07-25:
	* storetmp.c(_pam_krb5_storetmp_data): save and restore the SIGPIPE
	handler in case our child exits, drop any setuid/setgid pretense
	when we're called from a setuid application (#190159, patch by Jon
	Fautley), bail early if calls to setuid/setgid fail.
	* configure.ac: look for krb5/krb5.h in preference to krb5.h (new in
	MIT Kerberos 1.5)
	* src/stash.c(_pam_krb5_stash_external_read): if the default principal
	in the ccache doesn't match the userinfo structure, update the
	userinfo structure, based on patch from Jan Iven (#182239,#197660).
	* src/v4.c(v4save): always use the name of the v5 principal when saving
	credentials, especially for the "external" case where it may not be the
	value we originally guessed (#197660).
	* src/pam_krb5.5.in: note that the krb4_convert_524 and krb4_use_as_req
	options don't affect each other.
	* src/prompter.c(_pam_krb5_prompter): be more careful about other
	ways which our prompting callback can try to break us (noted by Michael
	Calmer).

2006-04-21:
	* src/prompter.c(_pam_krb5_prompter): check for dumb converation
	functions which return success but set the response to NULL.  From
	Michael Calmer.

2006-02-29:
	* src/v5.c(v5_get_creds): don't try to validate creds which aren't
	TGTs, because the attempt will always fail unless the matching key
	is in the keytab, which should never be the case for the
	password-changing service (#187303, rbasch)
	* src/tokens.c(tokens_obtain): if v4 has been disabled completely,
	go ahead and try to set 2b tokens because we're going to end up having
	to do that anyway (#182378).  If we have a hint principal, note it in
	debug output.
	* src/minikafs.c(minikafs_5log_with_principal): if we read a client
	principal from the ccache, unparse it and include it in debug messages.
	If we fail to obtain creds from the KDC, note why we failed.

2006-02-23:
	* src/stash.c(_pam_krb5_stash_get): skip v4 creds setup when v4 isn't
	enabled.

2006-02-21: