@@ -1,5 +1,10 @@
 2006-07-25:
-	* storetmp.c(_pam_krb5_storetmp_data): save and restore the SIGPIPE
+	* src/sly.c,src/sly.h(_pam_krb5_sly_looks_unsafe,
+	_pam_krb5_sly_maybe_refresh): move detection of whether or not it
+	looks safe into another function.
+	* src/auth.c(pam_sm_setcred): if it doesn't look safe to refresh
+	credentials, just return PAM_IGNORE (#197428).
+	* src/storetmp.c(_pam_krb5_storetmp_data): save and restore the SIGPIPE
 	handler in case our child exits, drop any setuid/setgid pretense
 	when we're called from a setuid application (#190159, patch by Jon
 	Fautley), bail early if calls to setuid/setgid fail.
